[Save Balance SnapShot Component, backEnd impl] - Save the Current Snapshot, and return a Diff Between Current and Previous
