# src/main/java/raz/balance_tracker/web/BalanceController.java
@@ -6,7 +6,11 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import raz.balance_tracker.api.generated.controllers.BalanceApi;
 import raz.balance_tracker.api.generated.models.BalanceSnapshotDTO;
+import raz.balance_tracker.model.BalanceSnapshot;
 import raz.balance_tracker.service.BalanceService;
+
+import java.time.OffsetDateTime;
+import java.time.ZonedDateTime;
 
 @RestController
 @Slf4j
@@ -16,14 +20,30 @@ public class BalanceController implements BalanceApi {
     private final BalanceService balanceService;
 
     @Override
-    public ResponseEntity<Void> saveBalanceSnapshot(BalanceSnapshotDTO balanceSnapshotDTO) {
+    public ResponseEntity<BalanceSnapshotDTO> saveBalanceSnapshot(BalanceSnapshotDTO balanceSnapshotDTO) {
 
 
         log.info("Saving balance snapshot: {}", balanceSnapshotDTO);
         System.out.println(balanceSnapshotDTO);
 
-        balanceService.saveSnapshot(balanceSnapshotDTO);
+        var balanceSnapshot = fromDTO(balanceSnapshotDTO);
+        BalanceSnapshot delta = balanceService.saveSnapshot(balanceSnapshot);
 
-        return ResponseEntity.ok().build();
+        return ResponseEntity.ok(toDTO(delta));
+    }
+
+    BalanceSnapshot fromDTO(BalanceSnapshotDTO balanceSnapshotDTO){
+        ZonedDateTime now = ZonedDateTime.now();
+        return new BalanceSnapshot(balanceSnapshotDTO.getBalance(), now);
+    }
+
+    BalanceSnapshotDTO toDTO(BalanceSnapshot balanceSnapshot){
+        OffsetDateTime created = balanceSnapshot.createdDate().toOffsetDateTime();
+
+        BalanceSnapshotDTO snapshotDTO = new BalanceSnapshotDTO()
+                .date(created)
+                .balance(balanceSnapshot.balance());
+
+        return snapshotDTO;
     }
 }
